Fix the visible area of hero in pad

--- a/sass/partial/_hero.sass
+++ b/sass/partial/_hero.sass
@@ -50,15 +50,22 @@
   +desktop
     margin-left: 12px
     width: calc(100% * 2 / 3 - 12px)
-    &:after
+    &:before, &:after
       position: absolute
-      right: 0
       top: 0
       display: block
-      width: 20px
       height: 100%
       background: white
       content: ''
+
+    &:before
+      left: 0
+      width: 12px
+      z-index: 1
+
+    &:after
+      right: 0
+      width: 20px
 
 .hero_menu_wrapper
   position: absolute
